# SR2-GraficaPorComputadoras

./: .gitignore  CMakeLists.txt  README.md  debug.sh
src/: fragment.h  main.cpp  print.h  shaders.h  triangle.h  uniform.h
